DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Jan-03-2007 aronb       Rewrote the Polhemus Fastrak driver.
                        NEW VERSION: 1.1.22
Dec-14-2006 aronb       Allow programmatic creation of usable device proxy
                        objects.
                        NEW VERSION: 1.1.21
Dec-13-2006 aronb       Added gadget::InputManager::shutdown(). Renamed
                        gadget::BaseDeviceInterface::refreshAllDevices() to
                        gadget::BaseDeviceInterface::refreshAllInterfaces().
                        NEW VERSION: 1.1.20
Dec-09-2006 patrick     Fixed frame delay problems in devices that are relative
                        to other proxied devices. Patch submitted by Frederic
                        Drolet.
                        NEW VERSION: 1.1.19
Nov-14-2006 patrick     Replaced uses of vpr::ReturnStatus with bool.
                        NEW VERSION: 1.1.18
Nov-07-2006 patrick     Added analog support to the VRPN driver.
Oct-01-2006 patrick     Updated for VPR 1.1.35.
                        NEW VERSION: 1.1.17
Oct-01-2006 patrick     Updated to handle the vpr::Thread constructor throwing
                        an exception.
                        NEW VERSION: 1.1.16
Aug-04-2006 dshipton    Flagpoll now used in the build...and simplifications.
                        NEW VERSION: 1.1.15
Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                        the base library name on Windows. Implemented automatic
                        linking of the Gadgeteer library.
                        NEW VERSION: 1.1.14
Jun-25-2006 patrick     Added support for building universal binaries on Mac
                        OS X.
                        NEW VERSION: 1.1.13
May-24-2006 patrick     Changed the names of the versioned header and data
                        directories to use the pre-1.1.10 naming convention